--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,8 @@
-## keybindings
+# keybindings ------------------------------------------------------------------
+
 unbind C-b
 unbind C-a
-unbind % 
+unbind %
 unbind ,
 unbind .
 unbind n
@@ -12,7 +13,7 @@ unbind l
 unbind &
 unbind "'"
 
-set-option -g prefix C-a # C-a for perfix just like screen
+set-option -g prefix C-a # C-a for prefix just like screen
 
 bind-key C-a    last-window
 bind-key |      split-window -h
@@ -38,26 +39,52 @@ bind-key C-l    resize-pane -R 5
 bind-key C-k    resize-pane -D 5
 bind-key C-i    resize-pane -U 5
 
-## use zsh
-set-option -g default-shell /bin/zsh
+# Colours (Solarized 256) ------------------------------------------------------
+
+# default statusbar colors
+set-option -g status-bg colour0
+set-option -g status-fg colour3
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour3
+set-window-option -g window-status-bg colour0
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour125
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# Status Bar -------------------------------------------------------------------
 
 ## set status bar
 set-option -g status-utf8 on
-set-option -g status-bg colour11
-set-option -g status-fg colour8
 
-#set-option -g status-left '⣿'
 #set-option -g status-right '⡇ #[bold]❐ #S:#I#[default] ⡇ #[bold]#(whoami) ● #H#[default] '
 #set-option -g status-right '⡇ ❐ #S ⡇ ❖ #(rvm tools identifier) ⡇ #(whoami) ● #H '
-set-option -g status-left ' #[bold]❐ #S#[default] ⡇'
+set-option -g status-left ' #[bold]#S#[default] ⣿'
 set-option -g status-right '#[bold]#(whoami) ● #H#[default] '
 
 set-option -g status-right-length 60
 set-option -g status-left-length 60
 
 ## highlight active window
-set-window-option -g window-status-current-bg colour166
-set-window-option -g window-status-current-fg colour15
 set-window-option -g window-status-current-attr bold
 set-window-option -g window-status-current-format ' #I #W '
 
@@ -69,7 +96,7 @@ set-window-option -g automatic-rename off
 
 ## tmux window titling for X
 set-option -g set-titles on
-set-option -g set-titles-string '[#I] #W'
+set-option -g set-titles-string '#S: #W'
 set-window-option -g automatic-rename on
 set-window-option -g window-status-format ' #I #W '
 set-window-option -g window-status-attr bold
@@ -85,10 +112,10 @@ set-window-option -g mode-mouse on
 # set-option -g status-keys vi
 # set-option -g history-limit 4096
 
-## pane border and colors
-set-option -g pane-active-border-fg yellow
-set-option -g pane-border-fg white
-
 set -g history-limit 10000
 set -g base-index 1
 set -s escape-time 0
+
+# use zsh
+set-option -g default-shell /bin/zsh
+set -g default-terminal "screen-256color"
