--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 # keybindings ------------------------------------------------------------------
+#
 
 unbind C-b
 unbind C-a
@@ -30,31 +31,34 @@ bind-key >      swap-window -t :+
 bind-key n      command-prompt 'rename-window %%'
 bind-key N      command-prompt 'rename-session %%'
 bind-key Escape copy-mode -u
-bind-key Up     copy-mode -u
 bind-key r      source-file ~/.tmux.conf; display-message " ✱ ~/.tmux.conf is reloaded"
 bind-key R      refresh-client
 bind-key a      send-key C-a
-bind-key C-j    resize-pane -L 5
+bind-key C-h    resize-pane -L 5
+bind-key C-j    resize-pane -D 5
+bind-key C-k    resize-pane -U 5
 bind-key C-l    resize-pane -R 5
-bind-key C-k    resize-pane -D 5
-bind-key C-i    resize-pane -U 5
+bind-key h      select-pane -L
+bind-key j      select-pane -D
+bind-key k      select-pane -U
+bind-key l      select-pane -R
 
 # Colours (Solarized 256) ------------------------------------------------------
 
 # default statusbar colors
-set-option -g status-bg colour0
-set-option -g status-fg colour3
+set-option -g status-bg '#282828'
+set-option -g status-fg '#B4B7B4'
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour3
-set-window-option -g window-status-bg colour0
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-bg '#282828'
+set-window-option -g window-status-fg '#B4B7B4'
+set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour125
+set-window-option -g window-status-current-fg colour3
 set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
@@ -79,12 +83,18 @@ set-option -g status-utf8 on
 #set-option -g status-right '⡇ #[bold]❐ #S:#I#[default] ⡇ #[bold]#(whoami) ● #H#[default] '
 #set-option -g status-right '⡇ ❐ #S ⡇ ❖ #(rvm tools identifier) ⡇ #(whoami) ● #H '
 set-option -g status-left ' #[bold]#S#[default] ⣿'
-set-option -g status-right '#[bold]#(whoami) ● #H#[default] '
+set-option -g status-right '#[bold]#(whoami) @ #H#[default] '
 
 set-option -g status-right-length 60
 set-option -g status-left-length 60
 
+set-window-option -g window-status-content-bg default
+set-window-option -g window-status-bell-bg default
+
 ## highlight active window
+set-window-option -g window-status-content-attr bold
+set-window-option -g window-status-bell-attr bold
+
 set-window-option -g window-status-current-attr bold
 set-window-option -g window-status-current-format ' #I #W '
 
@@ -112,10 +122,11 @@ set-window-option -g mode-mouse on
 # set-option -g status-keys vi
 # set-option -g history-limit 4096
 
-set -g history-limit 10000
+set -g history-limit 20000
 set -g base-index 1
 set -s escape-time 0
 
 # use zsh
 set-option -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
