--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,4 @@
 # keybindings ------------------------------------------------------------------
-#
 
 unbind C-b
 unbind C-a
@@ -14,34 +13,16 @@ unbind l
 unbind &
 unbind "'"
 
-set-option -g prefix C-a # C-a for prefix just like screen
+set-option -g prefix C-a
 
-bind-key C-a    last-window
-bind-key |      split-window -h
-bind-key \      split-window -h
-bind-key -      split-window -v
+bind C-a          last-window
 bind-key x      kill-pane
 bind-key X      kill-window
 bind-key q      confirm-before kill-session
 bind-key Q      confirm-before kill-server
-bind-key ,      previous-window # <
-bind-key .      next-window     # >
-bind-key <      swap-window -t :-
-bind-key >      swap-window -t :+
 bind-key n      command-prompt 'rename-window %%'
 bind-key N      command-prompt 'rename-session %%'
 bind-key Escape copy-mode -u
-bind-key r      source-file ~/.tmux.conf; display-message " ✱ ~/.tmux.conf is reloaded"
-bind-key R      refresh-client
-bind-key a      send-key C-a
-bind-key C-h    resize-pane -L 5
-bind-key C-j    resize-pane -D 5
-bind-key C-k    resize-pane -U 5
-bind-key C-l    resize-pane -R 5
-bind-key h      select-pane -L
-bind-key j      select-pane -D
-bind-key k      select-pane -U
-bind-key l      select-pane -R
 
 # Colours (Solarized 256) ------------------------------------------------------
 
@@ -78,10 +59,11 @@ set-window-option -g clock-mode-colour colour64 #green
 # Status Bar -------------------------------------------------------------------
 
 ## set status bar
+set -g utf8 on
 set-option -g status-utf8 on
 
-#set-option -g status-left ' #[bold]#S#[default] ⣿'
-set-option -g status-right '#[bold]#(whoami) @ #H#[default] '
+set-option -g status-left ' #[bold]#S#[default] ⎮'
+set-option -g status-right '#H#[default] '
 
 set-option -g status-right-length 60
 set-option -g status-left-length 60
@@ -119,12 +101,23 @@ set-window-option -g mode-keys vi
 set-window-option -g mode-mouse on
 # set-window-option -g monitor-activity off
 # set-window-option -g monitor-content off
-# set-option -g status-keys vi
-
-set -g history-limit 20000
-set -s escape-time 0
 
 # use zsh
 set-option -g default-shell /bin/zsh
-set -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+
+# -----------------------------------------------------------------------------
+# Plugins
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+
+set -g @shell_mode 'vi'
+
+# Init TPM (keep at bottom of file)
+run '~/.tmux/plugins/tpm/tpm'
