Enable tmux restoration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -117,6 +117,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
+set -g @continuum-restore 'on'
 set -g @shell_mode 'vi'
 
 # Init TPM (keep at bottom of file)
