--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,14 +15,17 @@ unbind "'"
 
 set-option -g prefix C-a
 
-bind C-a          last-window
+bind C-a        last-window
 bind-key x      kill-pane
 bind-key X      kill-window
 bind-key q      confirm-before kill-session
 bind-key Q      confirm-before kill-server
 bind-key n      command-prompt 'rename-window %%'
 bind-key N      command-prompt 'rename-session %%'
+bind-key ,      previous-window
+bind-key .      next-window
 bind-key Escape copy-mode -u
+bind r          source-file ~/.tmux.conf
 
 # Colours (Solarized 256) ------------------------------------------------------
 
@@ -61,11 +64,13 @@ set-window-option -g clock-mode-colour colour64 #green
 ## set status bar
 set -g utf8 on
 set-option -g status-utf8 on
+set-option -g status-interval 5
+set -g status-justify centre
 
-set-option -g status-left ' #[bold]#S#[default] ⎮'
-set-option -g status-right '#H#[default] '
+set-option -g status-left ' #S'
+set-option -g status-right ''
 
-set-option -g status-right-length 60
+set-option -g status-right-length 150
 set-option -g status-left-length 60
 
 set-window-option -g window-status-content-bg default
@@ -79,10 +84,11 @@ set-window-option -g window-status-current-attr bold
 set-window-option -g window-status-current-format ' #I #W '
 
 ## set window notifications
-set-option -g visual-activity on
+set-option -g visual-activity off
 set-option -g visual-content on
-set-window-option -g monitor-activity on
+set-window-option -g monitor-activity off
 set-window-option -g automatic-rename off
+set-option -g allow-rename off
 
 ## tmux window titling for X
 set-option -g set-titles on
@@ -92,6 +98,7 @@ set-window-option -g window-status-format ' #I #W '
 set-window-option -g window-status-attr bold
 # starts windows at 1 not 0
 set-option -g base-index 1
+set-option -g renumber-windows on
 
 # ------------------------------------------------------------------------------
 
