Bulk update weechat config

--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -76,14 +76,15 @@ mirc_remap = "1,-1:darkgray"
 nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
 reason_quit = default
+topic_current = default
 topic_new = white
 topic_old = default
 
 [network]
-alternate_nick = on
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 600
 ban_mask_default = "*!$ident@$host"
+channel_encode = off
 colors_receive = on
 colors_send = on
 lag_check = 60
@@ -124,11 +125,13 @@ default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
 nicks = "brandon,brandon1,brandon2,brandon3,brandon4"
+nicks_alternate = on
 notify = ""
 password = ""
 proxy = ""
 realname = ""
 sasl_fail = continue
+sasl_key = ""
 sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
@@ -156,12 +159,14 @@ znc-freenode.capabilities
 znc-freenode.sasl_mechanism
 znc-freenode.sasl_username
 znc-freenode.sasl_password
+znc-freenode.sasl_key
 znc-freenode.sasl_timeout
 znc-freenode.sasl_fail
 znc-freenode.autoconnect = on
 znc-freenode.autoreconnect
 znc-freenode.autoreconnect_delay
 znc-freenode.nicks = "interstateone"
+znc-freenode.nicks_alternate
 znc-freenode.username = "interstateone/freenode"
 znc-freenode.realname
 znc-freenode.local_hostname
@@ -193,12 +198,14 @@ znc-oftc.capabilities
 znc-oftc.sasl_mechanism
 znc-oftc.sasl_username
 znc-oftc.sasl_password
+znc-oftc.sasl_key
 znc-oftc.sasl_timeout
 znc-oftc.sasl_fail
 znc-oftc.autoconnect = on
 znc-oftc.autoreconnect
 znc-oftc.autoreconnect_delay
 znc-oftc.nicks = "interstateone"
+znc-oftc.nicks_alternate
 znc-oftc.username = "interstateone/oftc"
 znc-oftc.realname
 znc-oftc.local_hostname
