Move passwords into secure data
Update weechat passwords

--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -154,7 +154,7 @@ znc-freenode.ssl_priorities = "NORMAL"
 znc-freenode.ssl_dhkey_size = 2048
 znc-freenode.ssl_fingerprint = "88631a1cc94004ab5a30cb586f913106ff5a14aa"
 znc-freenode.ssl_verify = on
-znc-freenode.password = "***REMOVED***"
+znc-freenode.password = "${sec.data.freenode}"
 znc-freenode.capabilities
 znc-freenode.sasl_mechanism
 znc-freenode.sasl_username
@@ -193,7 +193,7 @@ znc-oftc.ssl_priorities
 znc-oftc.ssl_dhkey_size
 znc-oftc.ssl_fingerprint = "88631a1cc94004ab5a30cb586f913106ff5a14aa"
 znc-oftc.ssl_verify
-znc-oftc.password = "***REMOVED***"
+znc-oftc.password = "${sec.data.oftc}"
 znc-oftc.capabilities
 znc-oftc.sasl_mechanism
 znc-oftc.sasl_username
