--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,3 +28,6 @@
 	textconv = plutil -convert xml1 -o -
 [alias]
     ctags = "!sh -c '[ -f .git/hooks/ctags ] || git init; .git/hooks/ctags' git-ctags"
+[pager]
+	diff = diff-so-fancy | less --tabs=4 -RFX
+	show = diff-so-fancy | less --tabs=4 -RFX
