--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "vim/.vim/pack/plugins/start/emmet-vim"]
 	path = vim/.vim/pack/plugins/start/emmet-vim
 	url = git@github.com:mattn/emmet-vim.git
+[submodule "vim/.vim/pack/plugins/start/vim-abolish"]
+	path = vim/.vim/pack/plugins/start/vim-abolish
+	url = git@github.com:tpope/vim-abolish.git
