--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -62,8 +62,6 @@ set-window-option -g clock-mode-colour colour64 #green
 # Status Bar -------------------------------------------------------------------
 
 ## set status bar
-set -g utf8 on
-set-option -g status-utf8 on
 set-option -g status-interval 5
 set -g status-justify centre
 
@@ -73,11 +71,9 @@ set-option -g status-right ''
 set-option -g status-right-length 150
 set-option -g status-left-length 60
 
-set-window-option -g window-status-content-bg default
 set-window-option -g window-status-bell-bg default
 
 ## highlight active window
-set-window-option -g window-status-content-attr bold
 set-window-option -g window-status-bell-attr bold
 
 set-window-option -g window-status-current-attr bold
@@ -85,7 +81,6 @@ set-window-option -g window-status-current-format ' #I #W '
 
 ## set window notifications
 set-option -g visual-activity off
-set-option -g visual-content on
 set-window-option -g monitor-activity off
 set-window-option -g automatic-rename off
 set-option -g allow-rename off
@@ -103,9 +98,8 @@ set-option -g renumber-windows on
 # ------------------------------------------------------------------------------
 
 ## enable mouse
-set-option -g mouse-select-pane on
+set -g mouse on
 set-window-option -g mode-keys vi
-set-window-option -g mode-mouse on
 # set-window-option -g monitor-activity off
 # set-window-option -g monitor-content off
 
