--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,7 @@ bind-key ,      previous-window
 bind-key .      next-window
 bind-key Escape copy-mode -u
 bind r          source-file ~/.tmux.conf
+bind-key b      copy-mode\; copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward "❯ "
 
 # Colours (Solarized 256) ------------------------------------------------------
 
