Tmux - Set inactive pane to lighter background color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,6 +45,10 @@ set-window-option -g window-status-current-fg colour3
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr bright
 
+# set inactive pane background to lighter colour, active to default colour
+setw -g window-active-style bg=colour235
+setw -g window-style bg=colour239
+
 # pane border
 set-option -g pane-border-fg colour235 #base02
 set-option -g pane-active-border-fg colour240 #base01
