--- a/kwm/.khdrc
+++ b/kwm/.khdrc
@@ -1,94 +1,4 @@
-# sample config for khd
-
-# NOTE(koekeishiya): A bind is written in the form:
-#                   <keysym> [!] [<app list>] [->] : <command>
-#                   where
-#                       <keysym>   = mode + mod + ... + mod - literal
-#
-#                       <keysym>   = mode + mod + ... + mod - keycode
-#                                    keycode must have 0x prefix
-#
-#                       <keysym>   = mode + mod + ... + mod - button#
-#                                    replace '#' with mouse-button id; id >= 3
-#
-#                       modifier only binding
-#                       <keysym>   = mode + mod + ... + mod
-#
-#                       literal only binding
-#                       <keysym>   = - literal
-#
-#                       keycode only binding
-#                       <keysym>   = - keycode
-#
-#                       [<app,
-#                         app,     = optional list '[app1, ..., appN]' of applications
-#                         app>]      that this bind will be activated for. if the
-#                                    focused application is not contained in this list,
-#                                    the associated command will not be triggered, and
-#                                    the keypress will be passed through as normal.
-#
-#                       [!]        = optional operator '!' negates the behaviour when a
-#                                    list of applications is given. this marks the bind
-#                                    as 'Hotkey_Exclude', causing the bind to not work
-#                                    when the focused application is in the given list.
-#
-#                       [->]       = optional operator '->' that marks this bind as
-#                                    'passthrough'. this causes the key to be passed
-#                                    through to the system, instead of being consumed.
-#
-#                       <command>  = command is executed through '$SHELL -c' and
-#                                    follows valid shell syntax. if the $SHELL environment
-#                                    variable is not set, it will default to '/bin/bash'.
-#                                    when bash is used, the ';' delimeter can be specified
-#                                    to chain commands.
-#
-#                                    to allow a command to extend into multiple lines,
-#                                    prepend '\' at the end of the previous line.
-#
-#                                    an EOL character signifies the end of the bind.
-
-# NOTE(koekeishiya) Example of passthrough
-# cmd - m -> : echo "alert and minimize window" | alerter -title Test passthrough -timeout 2
-
-# NOTE(koekeishiya) Example of app list
-# alt - e [
-#           iTerm2,
-#           Terminal,
-#           HyperTerm
-#         ]
-#         : echo "so this is how deep the rabbit hole goes.." |\
-#           alerter -title Test passthrough -timeout 2
-
-# NOTE(koekeishiya) Example of negated app list
-# alt - e [
-#           iTerm2,
-#           Terminal,
-#           HyperTerm
-#         ] !
-#         : echo "blue pill, i choose you!" |\
-#           alerter -title Test passthrough -timeout 2
-
-# NOTE(koekeishiya) Modifier only binding
-# left shift    -> (    right shift   -> )
-# left cmd      -> {    right cmd     -> }
-
-# khd mod_trigger_timeout 0.1
-# lshift : khd -p "shift - 8"
-# rshift : khd -p "shift - 9"
-# lcmd   : khd -p "shift + alt - 8"
-# rcmd   : khd -p "shift + alt - 9"
-
-# NOTE(koekeishiya) Bind mouse-buttons
-# - button3 : khd -w "mouse-button 3 pressed"
-# - button4 : khd -w "mouse-button 4 pressed"
-
-# TODO(koekeishiya): possibly allow combined syntax such as
-# [switcher,ytd] + ctrl - f : khd -e "mode activate default"
-
-
-
 # vi-mode for non-terminal applications
-
 # remap left-control h/j/k/l -> arrow keys
 lctrl - h         ![HyperTerm,Terminal,iTerm2]      :   khd -p "- left"
 lctrl - j         ![HyperTerm,Terminal,iTerm2]      :   khd -p "- down"
@@ -100,67 +10,25 @@ shift + lctrl - j ![HyperTerm,Terminal,iTerm2]      :   khd -p "shift - down"
 shift + lctrl - k ![HyperTerm,Terminal,iTerm2]      :   khd -p "shift - up"
 shift + lctrl - l ![HyperTerm,Terminal,iTerm2]      :   khd -p "shift - right"
 
-# remap left-control 0 / 4   -> start / end of line
-lctrl - 0         ![HyperTerm,Terminal,iTerm2]      :   khd -p "cmd - left"
-lctrl - 4         ![HyperTerm,Terminal,iTerm2]      :   khd -p "cmd - right"
-
-# remap left-control g / G   -> start / end of text
-lctrl - g         ![HyperTerm,Terminal,iTerm2]      :   khd -p "cmd - up"
-lctrl + shift - g ![HyperTerm,Terminal,iTerm2]      :   khd -p "cmd - down"
-
-shift + lctrl - 0 ![HyperTerm,Terminal,iTerm2]      :   khd -p "shift + cmd - left"
-shift + lctrl - 4 ![HyperTerm,Terminal,iTerm2]      :   khd -p "shift + cmd - right"
-
-# remap left-control b / e   -> start / end of word
-lctrl - b         ![HyperTerm,Terminal,iTerm2]      :   khd -p "alt - left"
-lctrl - e         ![HyperTerm,Terminal,iTerm2]      :   khd -p "alt - right"
-
-shift + lctrl - b ![HyperTerm,Terminal,iTerm2]      :   khd -p "shift + alt - left"
-shift + lctrl - e ![HyperTerm,Terminal,iTerm2]      :   khd -p "shift + alt - right"
-
-# remap left-control x       -> forward delete
-lctrl - x         ![HyperTerm,Terminal,iTerm2]      :   khd -p "- delete"
-
-
-
 # enable kwm compatibility mode
 khd kwm on
 
-
-
 # set border color for different modes
-khd mode default color 0xddd5c4a1
-khd mode switcher color 0xddbdd322
-khd mode ytd color 0xddd75f5f
-khd mode swap color 0xdd458588
-khd mode tree color 0xddfabd2f
-khd mode space color 0xddb16286
-khd mode info color 0xddcd950c
-
-
+khd mode default color 0xFFBDD322
+khd mode switcher color 0xDDFABD2F
 
 # toggle between modes
 ctrl - f                :   khd -e "mode activate switcher"
 switcher + ctrl - f     :   khd -e "mode activate default"
-ytd + ctrl - f          :   khd -e "mode activate default"
-swap + ctrl - f         :   khd -e "mode activate default"
-space + ctrl - f        :   khd -e "mode activate default"
-tree + ctrl - f         :   khd -e "mode activate default"
-
-switcher - w            :   khd -e "mode activate ytd"
-switcher - a            :   khd -e "mode activate swap"
-switcher - s            :   khd -e "mode activate space"
-switcher - d            :   khd -e "mode activate tree"
-switcher - q            :   khd -e "mode activate info"
-
-
 
 # switcher mode
 switcher - r            :   khd -e "reload" # reload config
 
-switcher - return       :   open -na /Applications/HyperTerm.app;\
+# Open terminal
+switcher - return       :   open -na /Applications/Utilities/Terminal.app;\
                             khd -e "mode activate default"
 
+# Cycle window focus
 alt + shift - h           :   kwmc window -f west
 alt + shift - l           :   kwmc window -f east
 alt + shift - j           :   kwmc window -f south
@@ -169,55 +37,31 @@ alt + shift - i           :   kwmc window -s next
 alt + shift - o           :   kwmc window -s previous
 alt + shift - t           :   kwmc window -t focused
 
+# Focus space
 ctrl - 1            :   kwmc space -fExperimental 1
 ctrl - 2            :   kwmc space -fExperimental 2
 ctrl - 3            :   kwmc space -fExperimental 3
 ctrl - 4            :   kwmc space -fExperimental 4
 ctrl - 5            :   kwmc space -fExperimental 5
-ctrl - 6            :   kwmc space -fExperimental 6
 
+# Throw window to space
 alt + shift + lctrl - 1     :   kwmc window -m space 1; kwmc space -fExperimental 1
 alt + shift + lctrl - 2     :   kwmc window -m space 2; kwmc space -fExperimental 2
 alt + shift + lctrl - 3     :   kwmc window -m space 3; kwmc space -fExperimental 3
+alt + shift + lctrl - 4     :   kwmc window -m space 4; kwmc space -fExperimental 4
+alt + shift + lctrl - 5     :   kwmc window -m space 5; kwmc space -fExperimental 5
 
-switcher - z            :   kwmc space -fExperimental left
-switcher - c            :   kwmc space -fExperimental right
-switcher - f            :   kwmc space -fExperimental previous
+# Focus display
+switcher - 1    :   kwmc display -f 0
+switcher - 2    :   kwmc display -f 1
+switcher - 3    :   kwmc display -f 2
 
-switcher + shift - z    :   kwmc window -m space left;\
-                            kwmc space -fExperimental left
-
-switcher + shift - c    :   kwmc window -m space right;\
-                            kwmc space -fExperimental right
-
-switcher + shift - 1    :   kwmc display -f 0
-switcher + shift - 2    :   kwmc display -f 1
-switcher + shift - 3    :   kwmc display -f 2
-
-
-
-# ytd mode
-ytd - x                 :   ytc play;\
-                            khd -e "mode activate default"
-
-ytd - s                 :   ytc mkfav;\
-                            khd -e "mode activate default"
-
-# 0x32 == <
-ytd - 0x32              :   ytc fav
-ytd - z                 :   ytc prev
-ytd - c                 :   ytc next
-ytd - v                 :   ytc stop
-ytd - a                 :   ytc volup
-ytd - d                 :   ytc voldown
-ytd - right             :   ytc seekfw
-ytd - left              :   ytc seekbk
-
+# Swap window to display
 swap + shift - 1        :   kwmc window -m display 0
 swap + shift - 2        :   kwmc window -m display 1
 swap + shift - 3        :   kwmc window -m display 2
 
-# space mode
+# Spaces
 lalt + lshift - a               :   kwmc space -t bsp
 lalt + lshift - s               :   kwmc space -t monocle
 lalt + lshift - d               :   kwmc space -t float
@@ -228,32 +72,13 @@ lalt + lshift - y               :   kwmc space -g increase vertical
 lalt + lshift + lctrl - x       :   kwmc space -g decrease horizontal
 lalt + lshift + lctrl - y       :   kwmc space -g decrease vertical
 
-space - left            :   kwmc space -p increase left
-space - right           :   kwmc space -p increase right
-space - up              :   kwmc space -p increase top
-space - down            :   kwmc space -p increase bottom
-space - p               :   kwmc space -p increase all
-
-space + shift - left    :   kwmc space -p decrease left
-space + shift - right   :   kwmc space -p decrease right
-space + shift - up      :   kwmc space -p decrease top
-space + shift - down    :   kwmc space -p decrease bottom
-space + shift - p       :   kwmc space -p decrease all
-
-
-
-# tree mode
+# Window mode
 alt + shift - f                :   kwmc window -z fullscreen
 alt + shift - d                :   kwmc window -z parent
 alt + shift - w                :   kwmc window -t focused
 alt + shift - r                :   kwmc tree rotate 90
 
-tree - s                :   kwmc window -c split - mode toggle;\
-                            khd -e "mode activate default"
-
-tree - c                :   kwmc window -c type toggle;\
-                            khd -e "mode activate default"
-
+# Window size
 alt + shift + lctrl - h  :   kwmc window -c expand 0.05 west
 alt + shift + lctrl - j  :   kwmc window -c expand 0.05 south
 alt + shift + lctrl - k  :   kwmc window -c expand 0.05 north
@@ -263,14 +88,6 @@ lcmd + shift + lctrl - j  :   kwmc window -c reduce 0.05 north
 lcmd + shift + lctrl - k  :   kwmc window -c reduce 0.05 south
 lcmd + shift + lctrl - l  :   kwmc window -c reduce 0.05 west
 
-tree - p                :   kwmc tree -pseudo create
-tree + shift - p        :   kwmc tree -pseudo destroy
-
-tree - o                :   kwmc window -s prev
-tree + shift - o        :   kwmc window -s next
-
-
-
 # default
 cmd + alt + ctrl - m    :   kwmc window -mk focused
 cmd + alt + ctrl - h    :   kwmc window -mk west wrap
@@ -278,6 +95,3 @@ cmd + alt + ctrl - l    :   kwmc window -mk east wrap
 cmd + alt + ctrl - j    :   kwmc window -mk south wrap
 cmd + alt + ctrl - k    :   kwmc window -mk north wrap
 
-cmd - 7                 :   khd -w "\\"
-cmd - 8                 :   khd -w "{"
-cmd - 9 : khd -w "}"
