--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,7 +70,7 @@ set-window-option -g clock-mode-colour colour64 #green
 set-option -g status-interval 5
 set -g status-justify centre
 
-set-option -g status-left ' #S'
+set-option -g status-left ''
 set-option -g status-right ''
 
 set-option -g status-right-length 150
