--- a/kwm/.khdrc
+++ b/kwm/.khdrc
@@ -33,6 +33,16 @@ switcher - return       :   open -na /Applications/Utilities/Terminal.app;\
 ctrl + shift - f1                 :   /Users/brandon/bin/dellctl down
 ctrl + shift - f2                 :   /Users/brandon/bin/dellctl up
 
+# move mode
+move - p              :   kwmc space -p increase all
+move + shift - p      :   kwmc space -p decrease all
+
+move - x              :   kwmc space -g increase horizontal
+move - y              :   kwmc space -g increase vertical
+
+move + lshift - x     :   kwmc space -g decrease horizontal
+move + lshift - y     :   kwmc space -g decrease vertical
+
 # Cycle window focus
 alt + shift - h           :   kwmc window -f west
 alt + shift - l           :   kwmc window -f east
@@ -76,12 +86,6 @@ shift + switcher - 3        :   kwmc window -m display 2; khd -e "mode activate 
 lalt + lshift - a               :   kwmc space -t bsp
 lalt + lshift - s               :   kwmc space -t monocle
 lalt + lshift - d               :   kwmc space -t float
-
-lalt + lshift - x               :   kwmc space -g increase horizontal
-lalt + lshift - y               :   kwmc space -g increase vertical
-
-lalt + lshift + lctrl - x       :   kwmc space -g decrease horizontal
-lalt + lshift + lctrl - y       :   kwmc space -g decrease vertical
 
 # Window mode
 alt + shift - f                :   kwmc window -z fullscreen
